test/tests/compiler/8_loops/valid/extra_credit/switch_single_case.plx
pub fn main(none) i32 {
    a: i32 = 1
    #  a switch statement body may be a single case
    match a {
        -> 1 {
            return 1
        }
    }
    return 0
}
